# mirrorbox

./: .gitignore  MANIFEST.in  README.fa.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ActionCard.jsx  CacheModal.jsx  DocsModal.jsx  Header.jsx  MirrorsList.jsx  NetworkChart.jsx  SearchModal.jsx  ThemeToggle.jsx
mirrorbox/: main.py  mirrors.py
mirrorbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
