[project]
name = "mirrorbox"
version = "1.0.0"
authors = [{ name = "Pouya Rezapour", email = "pouyarezapourr@gmail.com" }]
description = "A smart, caching proxy for Docker, designed to bypass registry restrictions and accelerate your image pulls."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer",
    "rich",
    "requests",
    "pyyaml",
    "flet", 

[project.urls]
Homepage = "https://github.com/pouyarer/mirrorbox"

[project.scripts]
mirrorbox = "mirrorbox.cli:app"